Fix conic-gradient syntax for Chrome
This was working before a recent update to chromium, and had continued
to work in Safari, but broken in Chrome. Adjusted syntax to produce the
same gradient result.

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,8 @@ div.letters {
   animation: spin 30s linear infinite;
   background: conic-gradient(
     from var(--bg-angle) in oklch longer hue,
-    oklch(0.75 0.27 0) 0 0
+    oklch(0.75 0.27 0),
+    oklch(0.75 0.27 0)
   );
 
   background-clip: text;
